# daemon

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
migrations/: 001_initial.sql  002_questions_and_approval.sql  003_v3.sql  004_bolts.sql  005_activity_log.sql  006_labels.sql  007_reporter_review.sql  008_step_relations.sql  009_vector_search.sql  010_step_type.sql  011_artifact_scope.sql  012_project_enabled.sql  013_wiki_paths.sql  014_cleanup_statuses.sql  015_phase_execution_mode.sql  016_step_agent_id.sql  017_clawket_rename.sql
rust/: Cargo.toml  README.md
rust/src/: config.rs  db.rs  embeddings.rs  import_plan.rs  main.rs  models.rs  paths.rs  state.rs
rust/src/repo/: artifacts.rs  comments.rs  mod.rs  tasks.rs  units.rs
rust/src/routes/: activity.rs  artifacts.rs  backlog.rs  comments.rs  cycles.rs  embed.rs  error.rs  events.rs  import_export.rs  mod.rs  plans.rs  projects.rs  relations.rs  tasks.rs  timeline.rs  units.rs
rust/tests/: smoke_baseline.rs
scripts/: release-smoke.sh
src/: config.rs  db.js  db.rs  embeddings.js  embeddings.rs  format.js  id.js  id.rs  import-plan.js  import_plan.rs  main.rs  models.rs  paths.js  paths.rs  repo.js  server.js
src/repo/: activity_log.rs  artifacts.rs  cycles.rs  mod.rs  plans.rs  projects.rs  questions.rs  runs.rs  task_relations.rs  tasks.rs  timeline.rs
src/routes/: agents.rs  artifacts.rs  comments.rs  dashboard.rs  handoff.rs  labels.rs  mod.rs  plans.rs  questions.rs  relations.rs  runs.rs  static_files.rs  tasks.rs  units.rs  util.rs  wiki.rs
tests/: http_integration.rs  shutdown.rs  smoke_baseline.rs
