[package]
name = "clawketd"
version = "0.2.2"
edition = "2021"
description = "Clawket daemon — Axum HTTP server + SQLite + sqlite-vec for local RAG"
license = "MIT"
repository = "https://github.com/clawket/daemon"
homepage = "https://github.com/clawket/clawket"
keywords = ["clawket", "daemon", "task-management", "rag"]
categories = ["command-line-utilities"]

[[bin]]
name = "clawketd"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1"
zerocopy = "0.7"
rand = "0.8"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "rustls-tls"] }
once_cell = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
