[package]
name = "clawketd-rs"
version = "0.1.0-pre"
edition = "2021"
description = "Clawket daemon (Rust)"
license = "MIT"
repository = "https://github.com/clawket/daemon"

[[bin]]
name = "clawketd"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
